--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "personalwebsite",
   "version": "0.1.0",
-  "homepage": "https://youngwoo206.github.io/portfolio-website/",
+  "homepage": "https://harmonious-clafoutis-a6c4da.netlify.app/",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.9.0",
